# ucca-cpp

./: CMakeLists.txt  passage.cc  passage.h  ucca-corpus.h
cmake/: FindRapidXML.cmake
rapidxml/: rapidxml_print.hpp
ucca/: CMakeLists.txt  cmp_id.h  exceptions.h  passage.cc  passage.h  ucca-corpus.h
ucca/tests/: test_io.cc
